--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 html, body {margin:0; padding:0; height:100%; overflow:hidden; font-family:'Segoe UI', Arial; background:black; color:#e9f2ff;}
 .nebula{position:absolute;width:200vw;height:200vh;top:-50vh;left:-50vw;background:radial-gradient(circle, rgba(80,0,255,0.22) 0%, rgba(0,0,0,0) 70%);mix-blend-mode:screen;animation:spin1 120s linear infinite;}
 .nebula:nth-child(2){background:radial-gradient(circle, rgba(0,200,255,0.18) 0%, rgba(0,0,0,0) 70%);animation:spin2 180s linear infinite;}
-@keyframes spin1{from{transform:rotate(0deg);} to{transform:rotate(360deg);}}
-@keyframes spin2{from{transform:rotate(360deg);} to{transform:rotate(0deg);}}
+@keyframes spin1{from{transform:rotate(0deg);} to{transform:rotate(360deg);} }
+@keyframes spin2{from{transform:rotate(360deg);} to{transform:rotate(0deg);} }
 
 .calculator-panel{position:absolute;top:52%;left:50%;transform:translate(-50%,-50%);width:90%;max-width:600px;background:rgba(10,15,40,0.72);box-shadow:0 0 25px #4fa3ff60,inset 0 0 30px #6fb5ff30;border-radius:20px;padding:25px;backdrop-filter:blur(12px);}
 .clock-box{text-align:center;font-size:1.3rem;color:#bcd9ff;margin-bottom:20px;text-shadow:0 0 10px #4fa3ff;}
@@ -105,13 +105,13 @@ function showTab(id,event){
 // 숫자 입력(콤마+소수점)
 function addComma(num){return Number(num).toLocaleString('ko-KR',{maximumFractionDigits:2});}
 function uncomma(str){return parseFloat(str.replace(/,/g,""))||0;}
-document.querySelectorAll(".num").forEach(i=>{
-    i.addEventListener("input",function(){
-        let raw=this.value.replace(/,/g,"");
-        // 온점 하나만 허용
+document.querySelectorAll(".num").forEach(input => {
+    input.addEventListener("input", function() {
+        let raw = this.value.replace(/,/g,"");
+        raw = raw.replace(/[^\d.]/g,"");             // 숫자와 온점만
         const parts = raw.split('.');
         if(parts.length>2) raw = parts[0]+'.'+parts[1];
-        if(!isNaN(raw) && raw!=="") this.value=parseFloat(raw).toLocaleString('ko-KR',{maximumFractionDigits:2});
+        if(raw!=="" && !isNaN(raw)) this.value=parseFloat(raw).toLocaleString('ko-KR',{maximumFractionDigits:2});
     });
 });
 
@@ -126,16 +126,39 @@ function calcDeposit(){
     dep_result.innerHTML=`💰 <b>예금 결과</b><br>원금: ${addComma(P)}원<br>이자: ${addComma(interest)}원<br>만기수령액: <b>${addComma(total)}원</b>`;
 }
 
-// 적금(은행식 기준)
+// 적금
 function calcSaving(){
-    const A=uncomma(sav_amount.value), rate=uncomma(sav_rate.value)/100, n=Number(uncomma(sav_month.value)), type=sav_type.value;
-    let total=0;
-    if(type==="compound"){ 
-        const r=rate/12;
-        total=A*((Math.pow(1+r,n)-1)/r)*(1+r); // 은행식 월복리
-    } else total=A*n + A*(n+1)/2*(rate/12); // 단리
-    const interest=total-A*n;
-    sav_result.innerHTML=`📦 <b>적금 결과</b><br>총 납입액: ${addComma(A*n)}원<br>이자: ${addComma(interest)}원<br>만기수령액: <b>${addComma(total)}원</b>`;
+    const A = uncomma(sav_amount.value);    
+    const annualRate = uncomma(sav_rate.value)/100; 
+    const n = Number(uncomma(sav_month.value));
+    const type = sav_type.value;
+
+    let total = 0;
+
+    if(type === "compound"){ 
+        // 월 복리: 매월 납입 후 이자 적용
+        const r = annualRate / 12;
+        total = 0;
+        for(let i=0;i<n;i++){
+            total = (total + A) * (1 + r);
+        }
+    } else { 
+        // 단리: 각 월별 납입금액에 대해 남은 기간만큼 단리 이자 적용
+        total = 0;
+        for(let i=0;i<n;i++){
+            total += A * (1 + annualRate*((n-i)/12));
+        }
+    }
+
+    const paid = A*n;
+    const interest = total - paid;
+
+    sav_result.innerHTML = `
+        📦 <b>적금 결과</b><br>
+        총 납입액: ${addComma(paid)}원<br>
+        이자: ${addComma(interest)}원<br>
+        만기수령액: <b>${addComma(total)}원</b>
+    `;
 }
 
 // 대출
